v10.4.0/_sources/generated/pcdsdevices.signal.AggregateSignal.rst.txt
pcdsdevices.signal.AggregateSignal
==================================

.. currentmodule:: pcdsdevices.signal

.. autoclass:: AggregateSignal

    
    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: add_signal_by_attr_name
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: set
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: SUB_META
    .. autoattribute:: connected
    .. autoattribute:: high_limit
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: limits
    .. autoattribute:: low_limit
    .. autoattribute:: metadata
    .. autoattribute:: metadata_keys
    .. autoattribute:: read_access
    .. autoattribute:: source_name
    .. autoattribute:: subscriptions
    .. autoattribute:: timestamp
    .. autoattribute:: tolerance
    .. autoattribute:: value
    .. autoattribute:: write_access
    
    